@@ -588,7 +588,7 @@ class Translator(nodes.NodeVisitor):
             self.body.append('.SH COPYRIGHT\n%s\n'
                     % self._docinfo['copyright'])
         self.body.append(self.comment(
-                        'Generated by docutils manpage writer.\n'))
+                        'Generated by docutils manpage writer.'))
 
     def visit_emphasis(self, node):
         self.body.append(self.defs['emphasis'][0])
