@@ -48,5 +48,4 @@ Some text afterwards, test.txt ended with quotes test.
 Unicode breaks the man processing chain. The display
 ends with \fBsingle:\fP .
 .\" Generated by docutils manpage writer.
-.\" 
 .
