@@ -33,5 +33,4 @@ level margin: \\n[rst2man-indent\\n[rst2man-indent-level]]
 .sp
 Test document information Verarbeitung.
 .\" Generated by docutils manpage writer.
-.\" 
 .
