@@ -35,5 +35,4 @@ Test document information Verarbeitung.
 
 Datum: 2009-08-24
 .\" Generated by docutils manpage writer.
-.\" 
 .
