@@ -191,5 +191,4 @@ h.goebel@goebel-consult.de
 .SH COPYRIGHT
 public domain
 .\" Generated by docutils manpage writer.
-.\" 
 .
