@@ -410,5 +410,4 @@ A1B 2C3
 public domain
 Behave responsible.
 .\" Generated by docutils manpage writer.
-.\" 
 .
